--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,12 @@
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
 $forest: #0a3d62;
 $flat: #fad390;
 $good: #3c6382;
